--- a/packages/prometheus-nginx/carbonio-prometheus-nginx-exporter.service
+++ b/packages/prometheus-nginx/carbonio-prometheus-nginx-exporter.service
@@ -7,6 +7,8 @@ After=network.target
 User=carbonio-prometheus
 Group=carbonio-prometheus
 Type=simple
+Restart=on-failure
+RestartSec=30
 Environment=SSL_VERIFY=false
 EnvironmentFile=/etc/default/carbonio-prometheus-nginx-exporter
 ExecStart=/usr/bin/carbonio-prometheus-nginx-exporter $ARGS
