--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -5,18 +5,21 @@ global:
   # scrape_timeout is set to the global default (10s).
 
 # Alertmanager configuration, it uses two alert manager for HA
-# alerting:
-# alertmanagers:
-# - static_configs:
-# - targets:
-# - localhost:9093
-# - 192.168.157.81:9093
+alerting:
+  alertmanagers:
+  - static_configs:
+    - targets:
+      - localhost:9093
+      # - 192.168.157.81:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-# rule_files:
-# - "alert_rules.yml"
-# - "second_rules.yml"
-
+rule_files:
+        - "/etc/prometheus/rules/node_exporter.yaml"
+        - "/etc/prometheus/rules/mysql.yaml"
+        - "/etc/prometheus/rules/postgres.yaml"
+        - "/etc/prometheus/rules/consul.yaml"
+        - "/etc/prometheus/rules/mta_queues.yaml"
+        - "/etc/prometheus/rules/clamav.yaml"
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
