--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -30,12 +30,12 @@ sha256sums=("SKIP"
   "SKIP"
   "SKIP"
   "SKIP"
-  'cc41da9ca3507e01ca0ab953cdd009c84e19d1788835115ec6e2779678543a72'
-  'b986e65191da8334d70b9f7545784bacae2425f90db29e124bb7e5f953f96acc'
-  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224'
   "SKIP"
-  'cdb7b2b2f5ac90c4f3958e584a4c5899c250db1b4775e34f1a242e5713443192'
-  '9a3cb3da73ca92b641e9ac31223deadc0587c9ea280884a8ac8e80ab4266aa25')
+  "SKIP"
+  "SKIP"
+  "SKIP"
+  "SKIP"
+  "SKIP")
 
 depends=(
   "systemd"
