check without rules

--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -10,13 +10,13 @@ arch=('x86_64')
 license=('Apache-2.0')
 source=(
   "https://github.com/prometheus/prometheus/releases/download/v${pkgver}/prometheus-${pkgver}.linux-amd64.tar.gz"
-  "clamav.yaml"
-  "consul.yaml"
-  "mta_queues.yaml"
-  "mysql.yaml"
-  "nginx.yaml"
-  "node-exporter.yaml"
-  "postgres.yaml"
+  # "clamav.yaml"
+  # "consul.yaml"
+  # "mta_queues.yaml"
+  # "mysql.yaml"
+  # "nginx.yaml"
+  # "node-exporter.yaml"
+  # "postgres.yaml"
   "prometheus.default"
   "prometheus.service"
   "prometheus.sysusers"
