--- a/packages/prometheus-clamav/PKGBUILD
+++ b/packages/prometheus-clamav/PKGBUILD
@@ -40,15 +40,14 @@ sha256sums=(
 build() {
   cd "${srcdir}/clamav-prometheus-exporter-master/"
 
-  # comments will be removed after testing
-  # export CGO_CPPFLAGS="${CPPFLAGS}"
-  # export CGO_CFLAGS="${CFLAGS}"
-  # export CGO_CXXFLAGS="${CXXFLAGS}"
-  # export CGO_LDFLAGS="${LDFLAGS}"
-   export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly"
+  export CGO_CPPFLAGS="${CPPFLAGS}"
+  export CGO_CFLAGS="${CFLAGS}"
+  export CGO_CXXFLAGS="${CXXFLAGS}"
+  export CGO_LDFLAGS="${LDFLAGS}"
+  export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly"
 
 #  go build -o "${srcdir}/clamav-prometheus-exporter-master/carbonio-prometheus-clamav-exporter"
-go build
+ go build
 }
 
 package() {
