--- a/packages/prometheus-clamav/PKGBUILD
+++ b/packages/prometheus-clamav/PKGBUILD
@@ -46,8 +46,7 @@ build() {
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly"
 
-#  go build -o "${srcdir}/clamav-prometheus-exporter-master/carbonio-prometheus-clamav-exporter"
- go build
+ go build -o "carbonio-prometheus-clamav-exporter"
 }
 
 package() {
