--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -16,6 +16,7 @@ source=(
   "${pkgname}-consul.hcl"
   "set-${pkgname}.sh"
   "prometheus.sysusers"
+  "${pkgname}.tmpfiles"
 )
 sha256sums=(
   '4615e0e422109af6bdba6488092b5b651b8a014ef9bdf91f37978234d8484ce3'
@@ -24,7 +25,8 @@ sha256sums=(
   '01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b'
   'c69a28ab7f773338244fa48a8533f7a4ec2689ffbd3cbb36af3af839e1909873'
   '3875cb65cfd8365f6f65d1b0d8d10d7eb21a3ef2bef169c01d4e94ad8419e959'
-  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224')
+  '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
+  '6514371196a55f2096c4c65d281eaf2ace8648f94c432d57ff91776e1949d2ec')
 
 depends=(
   "systemd"
@@ -53,22 +55,25 @@ package() {
 
   cd "${srcdir}/"
 
+  install -Dm644 "${pkgname}.tmpfiles" \
+  "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+
   install -Dm 755 "./openldap_exporter-${pkgver}/target/openldap_exporter-linux" \
   "${pkgdir}/usr/bin/${pkgname}"
 
-  install -Dm 644 "${srcdir}/set-${pkgname}.sh" \
+  install -Dm 644 "set-${pkgname}.sh" \
   "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
 
-  install -Dm 644 "${srcdir}/${pkgname}.service" \
+  install -Dm 644 "${pkgname}.service" \
   "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}/${pkgname}.default" \
+  install -Dm 644 "${pkgname}.default" \
   "${pkgdir}/etc/default/${pkgname}"
-  install -Dm 644 "${srcdir}/${pkgname}.yml" \
+  install -Dm 644 "${pkgname}.yml" \
   "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
 
-  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+  install -Dm 644 "prometheus.sysusers" \
   "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+  install -Dm 644 "${pkgname}-consul.hcl" \
   "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
